# entirius-pylib-idx-normalizator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/idx_normalizator/: __init__.py  idx_normalizator.py
tests/: test_validation.py
