[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entirius-pylib-idx-normalizator"
version = "1.0.0"
description = "IDX Normalizer and Validator for Entirius platform"
authors = [{name = "Piotr Brzozowski", email = "piotr.brzozowski@entirius.com"}]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing",
]
dependencies = [
    "python-slugify",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/entirius/entirius-pylib-idx-normalizator"
Documentation = "https://docs.entirius.com"
Repository = "https://github.com/entirius/entirius-pylib-idx-normalizator"
Issues = "https://github.com/entirius/entirius-pylib-idx-normalizator/issues"
Changelog = "https://github.com/entirius/entirius-pylib-idx-normalizator/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"


[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose"
